Use of Java 9 convenience factory methods for collections (JEP 269).