@@ -1,7 +1,7 @@
 package de.saring.exerciseviewer.parser.impl;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.List;
 
 import de.saring.exerciseviewer.core.EVException;
 import de.saring.exerciseviewer.data.EVExercise;
@@ -38,7 +38,7 @@ public class PolarHsrRawParser extends AbstractExerciseParser {
     /**
      * Informations about this parser.
      */
-    private final ExerciseParserInfo info = new ExerciseParserInfo("Polar HSR", Arrays.asList("hsr", "HSR"));
+    private final ExerciseParserInfo info = new ExerciseParserInfo("Polar HSR", List.of("hsr", "HSR"));
 
     /**
      * The binary data of the exercise file.
